add missing info

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -28,23 +28,23 @@
     "Dataset has the following attributes:\n",
     "\n",
     "- type: Event type\n",
-    "- duration: Duration of event? or duration of fixation?\n",
+    "- duration:  Duration of the event, if it is a fixation, then it is the fixation duration\n",
     "- sac_amplitude: Amplitude of the eye saccades\n",
     "- sac_endpos_x: `x coordinate` of saccades end position \n",
     "- sac_endpos_y: `y coordinate` of saccades end position\n",
     "- sac_startpos_x: `x coordinate` of saccades start position\n",
     "- sac_startpos_y: `y coordinate` of saccades start position\n",
-    "- sac_vmax: ?\n",
-    "- fix_avgpos_x: average `x coordinate` position \n",
-    "- fix_avgpos_y: average `y coordinate` position\n",
-    "- fix_avgpupilsize: average pupil size of th eye\n",
-    "- overlapping: ?\n",
-    "- fix_samebox: ?\n",
+    "- sac_vmax: Maximal velocity of saccade\n",
+    "- fix_avgpos_x: Average `x coordinate` position \n",
+    "- fix_avgpos_y: Average `y coordinate` position\n",
+    "- fix_avgpupilsize: Average pupil size of the eye\n",
+    "- overlapping: Whether there are two bounding boxes that are overlapping (e.g. a face, being partially occluded by another head)\n",
+    "- fix_samebox: Whether the current fixation is within the same bounding box (e.g. same face) as the previous one.\n",
     "- id: Subject ID\n",
     "- picID: Picture ID\n",
     "- trialnum: Trial Number\n",
-    "- fix_type: type of the fixation.\n",
-    "- onset: event onset time.\n"
+    "- fix_type: Type of the fixation.\n",
+    "- onset: Event onset time.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -112,18 +112,18 @@
     "- NonetoHF - HFtoNone: Background to Human Face - Human Face to Backgound\n",
     "- HFtoHF: Human Face to Human Face\n",
     "- NonetoOS - OStoNone: Background to Outside the image - Outside to background\n",
-    "- NonetoHH - HHToNone: ?\n",
-    "- OLtoNone: ?\n",
-    "- HFtoNH: Human Face to ?\n",
-    "- NHtoNone: ?\n",
-    "- OStoOS: ?\n",
-    "- NHtoNH: ?\n",
-    "- OLtoHF: ___ to Human Face?\n",
-    "- HFtoHH: Human Face to ___?\n",
-    "- HHtoHH: ?\n",
-    "- NonetoOL: ?\n",
-    "- OstoHF - OStoNH:?\n",
-    "- OStoHH - HFtoOS: ?"
+    "- NonetoHH - HHToNone: Backgound to human head, in difference to human face\n",
+    "- OLtoNone: Overlapping bounding box, no unique attribution possible\n",
+    "- HFtoNH: Human Face to non human head (e.g. cardboard, or mannequin)\n",
+    "- NHtoNone: Non human head (e.g. cardboard, or mannequin) to Backgound\n",
+    "- OStoOS: Outside stimulus to outside stimulus\n",
+    "- NHtoNH: Non human head (e.g. cardboard, or mannequin) to Non human head (e.g. cardboard, or mannequin)\n",
+    "- OLtoHF: Overlapping bounding box to Human Face?\n",
+    "- HFtoHH: Human Face to Human Head?\n",
+    "- HHtoHH: Human Head to Human Head\n",
+    "- NonetoOL: Backgound to Overlapping bounding box\n",
+    "- OstoHF - OStoNH: Self decoded\n",
+    "- OStoHH - HFtoOS: Self decoded"
    ],
    "cell_type": "markdown",
    "metadata": {}
